
2017-11-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c: added parsing for ARITHMETIC clause
	* parser.y, reserved.c, cobc.h: added context sensitivity for
	  SCREEN SECTION, adjusted reserved words to CB_CS_SCREEN and CB_CS_SET
	* parser.y: renamed "not" to much more clearer "not_expr" to prevent
	  confusing it with "flag_not"
	* reserved.c: moved aliases LOW-VALUES/HIGH-VALUES to default.conf
	* parser.y: moved reset of cobc_cs_check from _mnemonic_conv to end of
	  call_statement
	* reserved.c (lookup_reserved_word): fixed returning of context-sensitive
	  word without context (happened when the word *set* a context, too);
	  no auto-reset for CB_CS_SCREEN context

2017-11-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_run): fixed possible SIGSEGV for long run options,
	  use output_name, with stripped extension if necessary (see bug #466)
	* cobc.c (process_translate): fixed bug #466 by removing path from
	  C source names after fopen
	* cobc.c: fixed possible SIGSEGV for long COB_STRIP_CMD
	* cobc.c (process_link): only add COB_EXE_EXT for running strip command
	  if is isn't already specified
	* pplex.l (ppopen): fixed bug #467 by adding missing checks for
	  recursive sources before fopen
	* cobc.c, error.c: allowed messages with filenames only, line number
	  isn't printed if -1

2017-11-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_assemble, process_filename)[__OS400__]: fixed
	  SIGSEGV by ensuring bufflen to always include the size of the full
	  path for fn->translate and a minor memory issue by calling
	  cobc_main_free with original fn->translate before assigning it with
	  the full path
	* cobc.c (process_assemble)[__OS400__, __WATCOMC__]: removed running
	  the created object file
	* cobc.c: renamed cobc_stradd_dup to cobc_main_stradd_dup and added
	  a new version of cobc_stradd_dup that uses temporary memory